[package]
name = "nolibc_test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustix = { version = "1.1", default-features = false, features = ["stdio"] }
syscalls = { version = "0.6.18", default-features = false, features = ["x86_64"] }

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
